--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Configure.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Configure.cshtml
@@ -1,11 +1,41 @@
-﻿<div class="font-semibold font-title">Configure your app here</div>
-<p>
-    <div>
+﻿@using Microsoft.Teams.Samples.TaskModule.Web.Helper;
+
+<div class="font-semibold font-title">Configure your app here</div>
+<form>
+    <p>
         <label for="tabChoice">Select the tab you would like to see: </label>
-        <select id="tabChoice" name="tabChoice">
-            <option value="" selected="selected">(Select a tab)</option>
-            <option value="first">First</option>
-            <option value="second">Second</option>
-        </select>
-    </div>
-</p>
+        <div>
+            <input type="radio" name="tabType" value="tasks" onclick="onClick()">Task Module<br>
+            <input type="radio" name="tabType" value="helloworld" onclick="onClick()"> Hello World
+        </div>
+    </p>
+</form>
+<script type="text/javascript">
+    microsoftTeams.initialize();
+    microsoftTeams.settings.registerOnSaveHandler(function (saveEvent) {
+
+        var radios = document.getElementsByName("tabType");
+        if (radios[0].checked) {
+            microsoftTeams.settings.setSettings({
+                entityId: "tasks",
+                contentUrl: "@(ApplicationSettings.BaseUrl)"+"/tasks",
+                suggestedDisplayName: "Task Module CSharp",
+                websiteUrl: "@(ApplicationSettings.BaseUrl)"+"/tasks"
+            });
+        } else {
+            microsoftTeams.settings.setSettings({
+                entityId: "helloworld",
+                contentUrl: "@(ApplicationSettings.BaseUrl)" +"/helloworld",
+                suggestedDisplayName: "Hello World",
+                websiteUrl: "@(ApplicationSettings.BaseUrl)" +"/helloworld"
+            });
+        }
+
+        saveEvent.notifySuccess();
+    });
+
+    function onClick() {
+        microsoftTeams.settings.setValidityState(true);
+    }
+
+</script>
