--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
@@ -22,7 +22,7 @@
         <p></p>
         <a target="_blank" href="@(ApplicationSettings.DeepLink)">Deep link to Custom Form Page</a>
     </div>
-
+<p></p>
 <script src="~/Scripts/teamsapp.js"></script>
 <script>
     microsoftTeams.initialize();
@@ -48,12 +48,18 @@
             taskInfo.height = "medium";
             taskInfo.width = "medium";
 
-            if (type.includes('youtube'))
+            if (type.includes('youtube')) {
                 taskInfo.url = "@(ApplicationSettings.BaseUrl)" + "/youtube";
-            else if (type.includes('powerapp'))
+                taskInfo.title = "Microsoft Ignite 2018 Vision Keynote";
+            }
+            else if (type.includes('powerapp')) {
                 taskInfo.url = "@(ApplicationSettings.BaseUrl)" + "/powerapp";
-            else if (type.includes('customform'))
+                taskInfo.title = "PowerApp: Asset Checkout";
+            }
+            else if (type.includes('customform')) {
                 taskInfo.url = "@(ApplicationSettings.BaseUrl)" + "/customform";
+                taskInfo.title = "Custom Form";
+            }
             else {
                 taskInfo.card = {
                     contentType: "application/vnd.microsoft.card.adaptive",
