--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/YouTube.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/YouTube.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_EmbedPage.cshtml";
 }
 
-<iframe width="1000" height="700" src="https://www.youtube.com/embed/rd0Rd8w3FZ0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+<iframe width="1000" height="700" src="https://www.youtube.com/embed/XBpibC4s0bc?start=588" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
 
 
 
