--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/PowerApp.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/PowerApp.cshtml
@@ -3,7 +3,8 @@
     Layout = "~/Views/Shared/_EmbedPage.cshtml";
 }
 
-<iframe id="powerApp" width="720" height="520" style="width: 94%; display: none;" src="https://web.powerapps.com/webplayer/iframeapp?source=iframe&amp;screenColor=rgba(104,101,171,1)&amp;appId=/providers/Microsoft.PowerApps/apps/a3447344-9220-4868-b45b-07759637be0f"></iframe>
+<iframe id="powerApp" width="720" height="520" style="width: 94%; display: none;" 
+        src="https://web.powerapps.com/webplayer/iframeapp?source=iframe&amp;screenColor=rgba(104,101,171,1)&amp;appId=/providers/Microsoft.PowerApps/apps/a3447344-9220-4868-b45b-07759637be0f"></iframe>
 <div class="surface" id="powerAppError" style="display: none; padding: 20px;">
     <p>
         This task module shows an "Asset Checkout" PowerApp (you'll find more information on it <a href="https://powerusers.microsoft.com/t5/Community-Apps-Gallery/Asset-Checkout-Microsoft-sample/td-p/43221" target="_blank">here</a>). Unfortunately, PowerApps
@@ -15,8 +16,8 @@
         <li>There's a search box in the middle of the page: search for "Asset Checkout".</li>
         <li>Click on it, press the "Make this app" button, and save it to the cloud.</li>
         <li>Press the Share button and you'll see a page with the newly-created PowerApp's App ID. Copy it to the clipboard.</li>
-        <li>Replace "a3447344-9220-4868-b45b-07759637be0f" in the <code>src=</code> URL of the &lt;iframe&gt; in this file (src/views/powerapp.pug) with your App ID.</li>
-        <li>Modify the JavaScript function in this file (src/views/powerapp.pug) to override the check for Microsoft's Tenant ID by uncommenting one line.</li>
+        <li>Replace "a3447344-9220-4868-b45b-07759637be0f" in the <code>src=</code> URL of the &lt;iframe&gt; in this file (Microsoft.Teams.Samples.TaskModule.Web/Views/Home/PowerApp.cshtml) with your App ID.</li>
+        <li>Modify the JavaScript function in this file (Microsoft.Teams.Samples.TaskModule.Web/Views/Home/PowerApp.cshtml) to override the check for Microsoft's Tenant ID by uncommenting one line.</li>
     </ol>
 </div>
 <script>
