--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/CustomForm.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/CustomForm.cshtml
@@ -1,4 +1,5 @@
-﻿<head>
+﻿<html>
+<head>
     <style>
         body {
             margin: 0;
@@ -39,25 +40,3 @@
     </div>
 </body>
 </html>
-
-
-
-@*<div class="font-semibold font-title">Configure your app here</div>
-    <p>
-        <div>
-            <button onclick="submit();">Submit</button>
-        </div>
-    </p>
-
-    <script type="text/javascript">
-        microsoftTeams.initialize();
-        function submit() {
-            var customerInfo = {
-                name: "myname",
-                email: "myvalue",
-                favoriteBook: "mybook"
-            }
-            microsoftTeams.tasks.submitTask(customerInfo, "@Microsoft.Teams.Samples.TaskModule.Web.Helper.ApplicationSettings.MicrosoftAppId" );
-        }
-
-    </script>*@
