--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Index.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Index.cshtml
@@ -1,6 +1,3 @@
-﻿<div class="font-semibold font-title">
-    Hello, World
-</div>
-<p>
-    Welcome to Microsoft Teams Hello World sample app (C#)
+﻿<p>
+    Welcome to Microsoft Teams Task Module Sample App (C#)
 </p>
