--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
@@ -8,8 +8,8 @@
 <p>
     Let's try it out!
     <div style="text-align: center; margin-left: auto; margin-right: auto;">
-        <button class="button-primary" onclick="submit('youtube');">Youtube</button>
-        <button class="button-primary" onclick="submit('powerapp');">Power App</button>
+        <button class="button-primary" onclick="submit('youtube');">YouTube</button>
+        <button class="button-primary" onclick="submit('powerapp');">PowerApp</button>
         <p></p>
         <button class="button-primary" onclick="submit('customform');">Custom Form (results &rarr; tab)</button>
         <p></p>
@@ -20,7 +20,7 @@
         <button class="button-primary" onclick="submit('adaptivecard bot');">Adaptive Card (results &rarr; bot)</button>
         <p></p>
         <p></p>
-        <a target="_blank" href="@(ApplicationSettings.DeepLink)">Deep link to Custom Form Page</a>
+        <a target="_blank" href="@(ApplicationSettings.DeepLink)">Deep link to Custom Form page</a>
     </div>
 
 <script src="~/Scripts/teamsapp.js"></script>
