Updated data models to according to data structure change (bug 387458). Also added code to fetch Adaptive card from C# code instead of JavaScript.

--- a/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Views/Home/Tasks.cshtml
@@ -66,10 +66,7 @@
                 taskInfo.width = "@(TaskModuleUIConstants.CustomForm.Width)";
             }
             else {
-                taskInfo.card = {
-                    contentType: "application/vnd.microsoft.card.adaptive",
-                    content: getAdaptiveCard()
-                };
+                taskInfo.card =  @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(AdaptiveCardHelper.GetAdaptiveCard()));
                 taskInfo.title = "@(TaskModuleUIConstants.AdaptiveCard.Title)";
                 taskInfo.height = "@(TaskModuleUIConstants.AdaptiveCard.Height)";
                 taskInfo.width = "@(TaskModuleUIConstants.AdaptiveCard.Width)";
